# ctoupiti

./: CMakeLists.txt  README.md  build.bat  compute.glsl  frag.glsl  main.c  shaders.h  vert.glsl
glad/: glad.c  glad.h
glfw/: CMakeLists.txt
